<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:padding="10dp"
    android:id="@+id/root"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_gravity="bottom"
            android:id="@+id/title"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <ImageView
            android:id="@+id/bookmark"
            android:background="@drawable/notbookmark"
            android:layout_width="25dp"
            android:layout_height="25dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content">


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:visibility="gone"
                    android:text="@string/string_artist_name"
                    android:ellipsize="end"
                    android:textColor="@android:color/black"
                    android:textSize="17dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:visibility="gone"
                    android:text=" : "
                    android:textColor="@android:color/black"
                    android:textSize="17dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/artist_name"
                    android:textStyle="bold"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="17dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:visibility="gone"
                    android:text="@string/string_collection_name"
                    android:textColor="@android:color/black"
                    android:textSize="17dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:visibility="gone"
                    android:text=" : "
                    android:textColor="@android:color/black"
                    android:textSize="17dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/genre"
                    android:textSize="17dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/string_price"
                    android:textSize="17dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:text=" : "
                    android:textSize="17dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/price"
                    android:textSize="17dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/string_track_count"
                    android:textSize="17dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:text=" : "
                    android:textSize="17dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/track_count"
                    android:textSize="17dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/string_release_date"
                    android:textSize="17dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:text=" : "
                    android:textSize="17dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/release_date"
                    android:textSize="17dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>


        </LinearLayout>

        <com.facebook.drawee.view.SimpleDraweeView
            android:layout_gravity="bottom"
            android:gravity="bottom"
            android:id="@+id/cover"
            android:layout_margin="10dp"
            fresco:placeholderImage="@drawable/ic_launcher_background"
            android:layout_width="100dp"
            android:layout_height="100dp"/>
    </LinearLayout>
</LinearLayout>